Bug: template is deprecated so using ng-template

--- a/src/pages/topic/topic.html
+++ b/src/pages/topic/topic.html
@@ -13,7 +13,7 @@
   </ion-header>
 
   <div padding class="article-list">
-    <template #articlesContainer>
-    </template>
+    <ng-template #articlesContainer>
+    </ng-template>
   </div>
 </ion-content>
